Sun Nov 27 21:25:33 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: added -fno-strict-overflow. it suppress annoying
	  -Wstrict-overflow warning.

Sun Nov 27 20:58:02 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c (rb_write_error2): get rid of warning on linux. fwrite
	  of glibc is tagged __attribute__ ((__warn_unused_result__))
	  if _FORTIFY_SOURCE != 0.
	* vm_dump.c (rb_vm_bugreport): ditto.

Sun Nov 27 19:09:02 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (stack_protector): disable on mingw.  [Bug#5676]

	* Makefile.in (DLDFLAGS): also needs -fstack-protector.
	  [Bug#5676]

Sun Nov 27 14:13:33 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: add -fstack-protector into XLDFLAGS as well as
	  XCFLAGS if stack-protector is used.

Sun Nov 27 13:09:25 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: workaround to avoid MacOS X build error.
	  Maybe autoconf 2.61 is slightly buggy. [ruby-core:41316]

Sun Nov 27 04:57:11 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in (--no-undefined): r33840 breaks FreeBSD and DragonFly
	  with gcc 4.4 or later. Their environ is in /usr/libexec/ld-elf.so.1,
	  so it will be false negative.

Sun Nov 27 04:55:45 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http.rb (Net::HTTP::SSL_IVNAMES): rerefix 33701.
	  SSL_ATTRIBUTES stores names for set_params, they are symbol.
	  SSL_IVNAMES stores instance variable names.

Sun Nov 27 00:16:07 2011  Tanaka Akira  <akr@fsij.org>

	* io.c (copy_stream_body): use 0666 for permission argument for open.
	  [ruby-core:40865]

Sat Nov 26 23:01:38 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* test/openssl/test_engine.rb: remove side effect of generic engine
	  load by explicitly loading software-based "openssl" engine for
	  all tests.

Sat Nov 26 20:41:48 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http.rb (Net::HTTP.get_response): enable use_ssl